// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Display /> matches 1`] = `
<div
  className="display panel"
>
  <div
    className="led green-led"
  >
    Unlocked
  </div>
  <div
    className="led green-led"
  >
    Open
  </div>
</div>
`;

exports[`<Display /> matches a snapshot with props passed into it 1`] = `
<div
  className="display panel"
>
  <div
    className="led red-led"
  >
    Locked
  </div>
  <div
    className="led green-led"
  >
    Open
  </div>
</div>
`;
